<resources>
    <string name="app_name">Javaids Greenhouse</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Cart</string>
    <string name="title_notifications">Profile</string>
    <string name="welcome_in">Welcome in</string>
    <string name="all_order">All Orders</string>
    <string name="pending">Pending</string>
    <string name="in_progress_order">In Progress</string>
    <string name="complete_order">Complete</string>
    <string name="canceled">Canceled</string>
    <string name="email">Email</string>
    <string name="no_thing_found">nothing found</string>
    <string name="mobile">Mobile No</string>
    <string name="address">Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password </string>
    <string name="invite_friends">Invite Friends</string>
    <string name="about_us">About Us</string>
    <string name="logout">Log Out</string>
    <string name="no_data">no data</string>
    <string name="add_to_card">add to cart</string>
    <string name="store_details">Store Details</string>
    <string name="delivery_time">Delivery time</string>
    <string name="working_hour">Working hour</string>
    <string name="workingtime">9:00am to 7:00pm</string>
    <string name="min_orders">Minimum order</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="no_item_in_cart">No item in cart</string>
    <string name="items">items</string>
    <string name="sub_total">Sub total</string>
    <string name="delivery_fee_2">delivery fee</string>
    <string name="coupons">coupons</string>
    <string name="total">total</string>
    <string name="item_price">item price</string>
    <string name="item_total">item total :</string>
    <string name="item_details">Item Detail</string>
</resources>