<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#F8F8F8" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="17dp"
                android:paddingTop="10dp"
                android:paddingEnd="17dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tajawal_regular"
                    android:text="@string/store_details"
                    android:textColor="#293340"
                    android:textSize="14sp"

                    android:textStyle="bold" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/smalllogo"
                    android:layout_gravity="center"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_delivery_time"
                        android:drawablePadding="22dp"
                        android:fontFamily="@font/tajawal_regular"
                        android:gravity="center"

                        android:text="@string/delivery_time"
                        android:textColor="#423A3A" />

                    <TextView
                        android:id="@+id/txt_delivery_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/tajawal_regular"

                        android:text="3 to 5 working days"
                        android:textColor="#686868"
                        android:textSize="12sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="7dp"
                    android:background="#EDEDED" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_working_hour"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/tajawal_regular"
                        android:gravity="center"
                        android:text="@string/working_hour"

                        android:textColor="#423A3A" />


                    <!--<android.support.v7.widget.RecyclerView-->
                    <!--android:id="@+id/rv_working_hours"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="5dp"-->
                    <!--android:visibility="gone" />-->

                    <TextView
                        android:id="@+id/txt_working_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:fontFamily="@font/tajawal_regular"
                        android:text="@string/workingtime"
                        android:textColor="#686868"

                        android:textSize="12sp"
                        android:visibility="visible" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="7dp"
                    android:background="#EDEDED" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_working_hour"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/tajawal_regular"
                        android:gravity="center"

                        android:text="@string/min_orders"
                        android:textColor="#423A3A" />

                    <TextView
                        android:id="@+id/txt_min_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:fontFamily="@font/tajawal_regular"
                        android:text="RS 200/-"
                        android:textColor="#686868"

                        android:textSize="12sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="7dp"
                    android:background="#EDEDED" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_delivery_fee"
                        android:drawablePadding="15dp"
                        android:fontFamily="@font/tajawal_regular"

                        android:gravity="center"
                        android:text="@string/delivery_fee"
                        android:textColor="#423A3A" />

                    <TextView
                        android:id="@+id/txt_delivery_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:fontFamily="@font/tajawal_regular"

                        android:text="RS 200/-"
                        android:textColor="#686868"
                        android:textSize="12sp" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="7dp"
                    android:background="#EDEDED" />







                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="15dp"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:drawableStart="@drawable/ic_pre_order"-->
                <!--android:drawablePadding="25dp"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/pre_order"-->
                <!--android:textColor="#423A3A" />-->

                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginStart="50dp"-->
                <!--android:text="no/yes"-->
                <!--android:textColor="#686868"-->
                <!--android:textSize="12sp" />-->
                <!--</LinearLayout>-->

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>