<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#fff"
    android:padding="5dp">

  <!--  <com.uniquestudio.library.CircleCheckBox
        android:id="@+id/check_choose"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_centerVertical="true"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        app:animation_duration="300"
        app:background_color="#fff"
        app:border_color="#D0D0D2"
        app:border_width="2dp"
        app:tick_color="@color/colorPrimary" />-->

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_product"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="16dp"
        app:riv_border_width="0dp"
        app:riv_corner_radius="4dp" />

    <TextView
        android:id="@+id/txt_product_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/img_product"
        android:fontFamily="@font/tajawal_medium"
        android:text="0X"
        android:textColor="#F35433"

        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_product_count"
        android:layout_marginStart="6dp"
        android:layout_toEndOf="@+id/txt_product_count"
        android:ellipsize="end"
        android:fontFamily="@font/tajawal_regular"

        android:maxLines="1"
        android:text="@string/no_thing_found"
        android:textColor="#2E1A10"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_product_count"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/img_product"
        android:text="@string/item_price"
        android:fontFamily="@font/tajawal_regular"

        android:textColor="#292929"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/price"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/price"
        android:fontFamily="@font/tajawal_regular"

        android:text="0 pkr"
        android:textColor="#F35433"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/img_product"
        android:fontFamily="@font/tajawal_regular"

        android:text="@string/item_total"
        android:textColor="#292929"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/total"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/total"
        android:fontFamily="@font/tajawal_regular"
        android:text="0 KDL"
        android:textColor="#F35433"
        android:textSize="12sp"
        android:textStyle="bold" />



    <RelativeLayout
        android:id="@+id/relative_counter"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_total_price"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/img_product"
        android:background="@drawable/counter_border"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <ImageView
            android:id="@+id/img_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/ic_rectangle"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:padding="3dp"
            android:src="@drawable/ic_plus_carts" />

        <TextView
            android:id="@+id/txt_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:fontFamily="@font/tajawal_regular"
            android:text="1"
            android:textColor="#2E1A10" />

        <ImageView
            android:id="@+id/img_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/ic_minus_carts" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/relative_counter"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackgroundBorderless"
        android:padding="5dp"
        android:src="@drawable/ic_delete" />

    <!--<ImageView-->
    <!--android:id="@+id/img_edit"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_marginBottom="10dp"-->
    <!--android:background="?selectableItemBackgroundBorderless"-->
    <!--android:clickable="true"-->
    <!--android:focusable="true"-->
    <!--android:src="@drawable/ic_edit" />-->

</RelativeLayout>